# Shrink

app/: CMakeLists.txt  Shrink.apk  app-release.apk  build.gradle
app/src/androidTest/java/pebble/shrink/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bwt.c  bwt.h  dcrz.c  dcrz.h  dcrzDecode.c  dcrzDecode.h  dcrzEncode.c  dcrzEncode.h  huffDecode.c  huffEncode.c  huffman.h  ibwt.c  ibwt.h  mtf.c  mtf.h  rle.c  rle.h
app/src/main/java/pebble/shrink/: CompressFile.java  Compression.java  CompressionService.java  CompressionUtils.java  CreateGroup.java  DataTransfer.java  DataTransferService.java  Decompressor.java  Deflate.java  Device.java  DeviceBroadcastReceiver.java  DeviceGroupListener.java  DeviceListAdapter.java  DeviceMaster.java  DeviceOperations.java  DeviceSlave.java  Distributor.java  DistributorService.java  FileChooser.java  Help.java  MasterDevice.java  Notification.java  NotificationUtil.java  NotificationUtils.java  P2pOperations.java  ShareResource.java  Shrink.java  SlaveDeviceService.java  TaskAllocation.java  WifiOperations.java  WifiReceiver.java  WifiScanner.java
app/src/main/res/layout/: compress_activity.xml  decompress_activity.xml  fc_empty_view.xml  fc_list_item.xml  help.xml  share_resource.xml  shrink_activity.xml
app/src/main/res/menu/: cf_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/pebble/shrink/: CompressionUtilsTest.java  ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
